force-app/main/default/objects/B2B_RegionProduct__c/B2B_RegionProduct__c.object-meta.xml
<CustomObject>
    <description>Objeto para almadcenar los productows que forman parte del B2B de una región (org de ventas)</description>
    <label>B2B Region Product</label>
    <nameField>
        <label>B2B_RegionProductScope__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2B Region Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>