force-app/main/default/objects/B2B_RegionProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>B2B Region Products</relationshipLabel>
    <relationshipName>B2B_Region_Products</relationshipName>
    <type>Lookup</type>
</CustomField>