force-app/main/default/objects/B2B_RegionProduct__c/fields/StockKeepingUnit__c.field-meta.xml
<CustomField>
    <fullName>StockKeepingUnit__c</fullName>
    <label>Stock Keeping Unit</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>